--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,7 @@ article {
   background: var(--dark-purpley-blue);
   border-radius: inherit;
   z-index: -1;
+  box-shadow: var(--shadow-1);
 }
 
 .icon-box ion-icon { --ionicon-stroke-width: 35px; }
@@ -358,6 +359,7 @@ main {
   width: max-content;
   padding: 3px 12px;
   border-radius: 8px;
+  box-shadow: var(--shadow-1);
 }
 
 .info_more-btn {
@@ -1274,6 +1276,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .clients-item { min-width: calc(33.33% - 10px); }
 
 
+  .info-content .title { margin: auto; box-shadow: var(--shadow-1);}
 
   /**
    * #PORTFOLIO, BLOG 
@@ -1376,7 +1379,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .info-content .name { margin-bottom: 15px; }
 
-  .info-content .title { padding: 5px 18px; }
+  .info-content .title { padding: 5px 18px; box-shadow: var(--shadow-1);}
 
   .info_more-btn {
     top: -35px;
@@ -1615,6 +1618,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     gap: 5px 5px;
   }
 
+  .info-content .title { margin: auto; box-shadow: var(--shadow-1);}
 
   /**
    * NAVBAR
@@ -1773,6 +1777,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .navbar-link { font-weight: var(--fw-500); }
 
+  .info-content .title { margin: auto; box-shadow: var(--shadow-1);}
 
 
   /**
@@ -1898,7 +1903,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     text-align: center;
   }
 
-  .info-content .title { margin: auto; }
+  .info-content .title { margin: auto; box-shadow: var(--shadow-1);}
 
   .info_more-btn { display: none; }
 
