--- a/llm-elicited-priors/static/css/index.css
+++ b/llm-elicited-priors/static/css/index.css
@@ -98,6 +98,13 @@ body {
   margin: 1% 2%;
 }
 
+.journal-name {
+  font-weight: bold;
+  vertical-align: top;
+  align-items: center;
+  padding: 2%;
+}
+
 .author-name-text {
   font-size: 1rem;
 }
